Fixing shopdata and sheaths

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 path = D:\Nowy_folder\content
 mods_path = MODS
 lang = Bootup_EUen
-mode = switch
+mode = wiiu
 switch_path = F:/Botw_modding/_BOTW_SWITCH
-wiiu_path = D:/Games/cemu_1.21.3/rars/Botw_resource/content
+wiiu_path = D:/Nowy_folder/content
 
