--- a/config.ini
+++ b/config.ini
@@ -4,5 +4,5 @@ mods_path = MODS
 lang = Bootup_EUen
 mode = wiiu
 switch_path = F:/Botw_modding/_BOTW_SWITCH
-wiiu_path = D:/Nowy_folder/content
+wiiu_path = F:/Botw_modding/content
 
