Game paths and setings are now pulled from BCML settings

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@ path = D:\Nowy_folder\content
 mods_path = MODS
 lang = Bootup_EUen
 mode = wiiu
-switch_path = F:/Botw_modding/_BOTW_SWITCH
-wiiu_path = F:/Botw_modding/content
+switch_path = C:\Users\user\Documents\botw\_BOTW_SWITCH
+wiiu_path = 
+wiiu_update = C:\Users\user\Documents\botw\content
 
