--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
-path = D:\Nowy_folder\content
-mods_path = MODS
 lang = Bootup_EUen
-mode = wiiu
+mode = switch
 switch_path = C:\Users\user\Documents\botw\_BOTW_SWITCH
 wiiu_path = 
 wiiu_update = C:\Users\user\Documents\botw\content
+is_bcml_settings = False
+mods_path = MODS
 
