Improved code quality, added pywin32 message boxes

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
 lang = Bootup_EUen
-mode = switch
-switch_path = C:\Users\user\Documents\botw\_BOTW_SWITCH
-wiiu_path = 
-wiiu_update = C:\Users\user\Documents\botw\content
-is_bcml_settings = False
+mode = wiiu
+switch_path = G:\Botw\BOTW_SWITCH
+wiiu_path = D:\cemu_1.25.6\isos\The Legend of Zelda Breath of the Wild (EUR, Main Game)\content
+wiiu_update = D:\cemu_1.25.6\mlc01\usr\title\0005000e\101c9500\content
+is_bcml_settings = True
 mods_path = MODS
 
